bugfix: исправлены критические баги для клиентов scrapper